deployments/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: informer-ingress
  namespace: gs
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - david.azure.com
      secretName: aks-ingress-tls
  rules:
    - host: david.azure.com
      http:
        paths:
          - backend:
              serviceName: informers
              servicePort: 80
            path: /

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller-svc
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  namespace: ingress
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    k8s-app: nginx-ingress-controller
  type: LoadBalancer
